@@ -112,8 +112,9 @@ typedef enum {
 
 
 enum {
-    WBNotFound = INT_MIN, /* element was not found in bag */
-    WANotFound = -1       /* element was not found in array */
+    WBNotFound = INT_MIN, /* element was not found in WMBag   */
+    WANotFound = -1,      /* element was not found in WMArray */
+    WLNotFound = -1       /* element was not found in WMList  */
 };
 
 
